# hse_zip

./: .gitattributes  .gitignore  CMakeLists.txt  Contributing.md  LICENSE  Readme.md  archive.c  decode.c  howWriteCode.txt  main.c
.github/workflows/: cmake.yml
Google_tests/: CMakeLists.txt  consts.h  heavy.cpp  main.cpp  main.h  test-bin.cpp  test-heavy.cpp  test-text.cpp  test1.cpp  test2.cpp
Google_tests/utils/: test-utils.cpp  test-utils.hpp
fileWorker/: filePrepare.c  filePrepare.h  input.txt
install/: ins.reg  install.c  unins.reg  uninstall.c
testData/: example.txt  text_100byte.txt  text_10byte.txt  text_50byte.txt
testDataInput/: 1mb_ab.txt  example.txt  test.docx  text_100000byte.txt  text_1000byte.txt  text_20byte.txt  text_A.txt
testDataOutput/: answer.hse_zip  answer.txt  readme.md
tests/: main.c  testMain.c
tree_list/: CMakeLists.txt  decode.c  decode.h  encode.c  encode.h  input.txt  main.c  tree_list.c  tree_list.h  union.h
utils/: printColors.h  time.c  time.h  utils.c  utils.h
